--- a/css/estilos.css
+++ b/css/estilos.css
@@ -45,7 +45,13 @@ h1{
     font-size: 25px;
     font-family: fantasy;
     padding-top: 25px;
+    text-align: left;
 }
+
+.nav-right{
+    flex:1 1 200px;
+}
+
 .navbar-dark
 {
     background: linear-gradient(to right, rgb(0, 0, 0) 30%, rgb(44, 0, 65) 90%);
